fixed user authorities implementation